tests/specs/ecosystem/lightbery/virtual_file_tree/1_0_0.test
lightbery/virtual-file-tree/1.0.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2580 [ERROR]: Cannot find name 'Buffer'.
  public writeFile(virtualPath: string, data: Buffer, options?: {
                                              ~~~~~~
    at file://<tmpdir>/Virtual-File-Tree.ts:10:47

